# ImageBasedSpatioTemporalInterpolation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compression.py  env.yaml  eval_compression.py  index.html
dependencies/stb_image/: stb_image.h
dependencies/tinyexr/: tinyexr.h
include/: data.h  file_reader.h  renderer.h
include/util/: cuda_helper_device.h  cuda_helper_host.h  helper_common.h  helper_math.h  helper_math_ext.h  image_buffer.h
scripts/: eval.py  flip_loss.py  generate_main_table.py  make_video.bat  plot_over_time.py  run.bat  run_benchmarks.bat
src/: file_reader.cu  main.cu  renderer.cu
src/util/: image_buffer.cu
static/css/: index.css
static/js/: index.js
